objects/TRWayLeadMgmt__SLA_Violation__c.object
<CustomObject>
    <fields>
        <fullName>TRWayLeadMgmt__Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>SLA_Voilations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Panorama_Met_SLA__c</fullName>
        <label>Met SLA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Panorama_SLA_TargetTime__c</fullName>
        <label>Target Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Panorama_SLA_Violation_Email_Sent__c</fullName>
        <label>Violation Email Sent / Task Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Panorama_SLA_Warning_Email_Sent__c</fullName>
        <label>Warning Email Sent / Task Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Panorama_SLA_Warning_Target_Time__c</fullName>
        <label>SLA Warning Target Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Panorama_Stage_Time_In__c</fullName>
        <label>Time In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Panorama_Stage_Time_Out__c</fullName>
        <label>Time Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Panorama_Stage_Total_Time__c</fullName>
        <label>Total Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Panorama_Stage__c</fullName>
        <label>Panorama Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exclude</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                    <default>true</default>
                    <label>Marketing Qualified</label>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified</fullName>
                </value>
                <value>
                    <fullName>Telesales Accepted</fullName>
                </value>
                <value>
                    <fullName>Telesales Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Total_Time_In_Mins__c</fullName>
        <description>This field specifies the total time value in mins</description>
        <label>Total Time (In Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SLA Tracking</label>
    <listViews>
        <fullName>TRWayLeadMgmt__All</fullName>
        <columns>NAME</columns>
        <columns>TRWayLeadMgmt__Lead_Id__c</columns>
        <columns>TRWayLeadMgmt__Panorama_Stage__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_Warning_Target_Time__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_Warning_Email_Sent__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_TargetTime__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_Violation_Email_Sent__c</columns>
        <columns>TRWayLeadMgmt__Panorama_Stage_Time_In__c</columns>
        <columns>TRWayLeadMgmt__Panorama_Stage_Time_Out__c</columns>
        <columns>TRWayLeadMgmt__Panorama_Stage_Total_Time__c</columns>
        <columns>TRWayLeadMgmt__Total_Time_In_Mins__c</columns>
        <columns>TRWayLeadMgmt__Panorama_Met_SLA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TRWayLeadMgmt__Leads_Violated</fullName>
        <columns>NAME</columns>
        <columns>TRWayLeadMgmt__Lead_Id__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_Warning_Target_Time__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_Warning_Email_Sent__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_TargetTime__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_Violation_Email_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRWayLeadMgmt__Panorama_SLA_Violation_Email_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>TRWayLeadMgmt__Panorama_SLA_TargetTime__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Leads Violated</label>
    </listViews>
    <listViews>
        <fullName>TRWayLeadMgmt__Warning</fullName>
        <columns>NAME</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_Warning_Target_Time__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_Warning_Email_Sent__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_TargetTime__c</columns>
        <columns>TRWayLeadMgmt__Panorama_SLA_Violation_Email_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRWayLeadMgmt__Panorama_SLA_Warning_Email_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>TRWayLeadMgmt__Panorama_SLA_Warning_Target_Time__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Warning</label>
    </listViews>
    <nameField>
        <displayFormat>SLA Tracking Number-{0000}</displayFormat>
        <label>SLA Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLAs Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>